--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://shadcn-admin.netlify.app" />
+    <meta property="og:url" content="https://tramite-app.netlify.app" />
     <meta property="og:title" content="Tramite App" />
     <meta
       property="og:description"
@@ -46,12 +46,12 @@
     />
     <meta
       property="og:image"
-      content="https://shadcn-admin.netlify.app/images/shadcn-admin.png"
+      content="https://tramite-app.netlify.app/images/tramite-app.png"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://shadcn-admin.netlify.app" />
+    <meta property="twitter:url" content="https://tramite-app.netlify.app" />
     <meta property="twitter:title" content="Tramite App" />
     <meta
       property="twitter:description"
@@ -59,7 +59,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://shadcn-admin.netlify.app/images/shadcn-admin.png"
+      content="https://tramite-app.netlify.app/images/tramite-app.png"
     />
 
     <!-- font family -->
